# HydroponicSystem

./: .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
HydroponicsSystem/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/tests/: tests.py
