[project]
name = "hydroponicssystem"
version = "0.1.0"
description = "Hydroponic system management with Django"
authors = [
    {name = "Fluorky",email = "mrdyrt.inf@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "asgiref (==3.8.1)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "coverage (==7.6.12)",
    "django (==5.1.6)",
    "django-debug-toolbar (==5.0.1)",
    "django-extensions (==3.2.3)",
    "django-filter (==25.1)",
    "djangorestframework (==3.15.2)",
    "djangorestframework-simplejwt (==5.4.0)",
    "drf-yasg (==1.21.8)",
    "gunicorn (==23.0.0)",
    "idna (==3.10)",
    "inflection (==0.5.1)",
    "packaging (==24.2)",
    "psycopg2-binary (==2.9.10)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.0.1)",
    "pytz (==2025.1)",
    "pyyaml (==6.0.2)",
    "requests (==2.32.3)",
    "sqlparse (==0.5.3)",
    "uritemplate (==4.1.1)",
    "urllib3 (==2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "23.0.0"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
